--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -367,5 +367,7 @@
     <string name="no_stakeholder">No Stakeholder</string>
     <string name="choose_property">Choose Property</string>
     <string name="create_transaction_property_error">Property does not have a stakeholder, cannot create transaction.</string>
+    <string name="invalid_date_for_summary">Invalid date! The latest Monthly Summary available is for </string>
+    <string name="select_month">Select a Month</string>
 
 </resources>
