--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,7 +174,7 @@
     <string name="add_new_cat">Add New Category</string>
     <string name="dismiss">Dismiss</string>
     <string name="not_recorded">Not Recorded</string>
-    <string name="balance">BALANCE</string>
+    <string name="balance">Balance</string>
     <string name="error_loading">Error Loading...</string>
     <string name="add_custom_category">Add Custom Category</string>
     <string name="time">Hour:</string>
